--- a/06-the-need-for-computed-properties.html
+++ b/06-the-need-for-computed-properties.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title></title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="root">
-        <h1>All Tasks</h1>
-        <ul>
-            <li v-for="task in tasks">{{ task.description }}</li>
-        </ul>
-        <h1>Incomplete Tasks</h1>
-        <ul>
-            <li v-for="task in incompleteTasks">{{ task.description }}</li>
-        </ul>
+      <h1>All Tasks</h1>
+      <div v-for="task in tasks">
+        <input type="checkbox" v-model="task.completed" />
+        <label
+          :for="task.description
+                "
+          >{{ task.description }}</label
+        >
+      </div>
+      <h1>Completed Tasks</h1>
+      <ul>
+        <li v-for="task in completeTasks">{{ task.description }}</li>
+      </ul>
+
+      <h1>Incomplete Tasks</h1>
+      <ul>
+        <li v-for="task in incompleteTasks">{{ task.description }}</li>
+      </ul>
     </div>
 
     <script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
     <script>
-        var app = new Vue({
-            el: '#root',
+      var app = new Vue({
+        el: "#root",
 
-            data: {
-                tasks: [
-                    { description: 'Go to the store', completed: true },
-                    { description: 'Finish screencast', completed: false },
-                    { description: 'Make donation', completed: false },
-                    { description: 'Clear inbox', completed: false },
-                    { description: 'Make dinner', completed: false },
-                    { description: 'Clean room', completed: true },
-                ]
-            },
+        data: {
+          tasks: [
+            { description: "Go to the store", completed: true },
+            { description: "Finish screencast", completed: false },
+            { description: "Make donation", completed: false },
+            { description: "Clear inbox", completed: false },
+            { description: "Make dinner", completed: false },
+            { description: "Clean room", completed: true },
+          ],
+        },
 
-            computed: {
-                incompleteTasks() {
-                    return this.tasks.filter(task => ! task.completed);
-                }
-            }
-        });
+        computed: {
+          completeTasks() {
+            return this.tasks.filter((task) => task.completed);
+          },
+          incompleteTasks() {
+            return this.tasks.filter((task) => !task.completed);
+          },
+        },
+      });
     </script>
-</body>
+  </body>
 </html>
